--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Sección de Nuestra Canción con Reproductor Personalizado -->
         <section class="music-section">
             <h2>Nuestra Canción</h2>
-            <p>Dale play y cierra los ojos. Esta canción siempre será el soundtrack de nuestra historia.</p>
+            <p>Dale play y cierra los ojos. Esta canción siempre me recuerda a ti.</p>
         
             <!-- REPRODUCTOR ESTILO SPOTIFY -->
             <div class="spotify-player">
@@ -126,4 +126,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
